TIMS-1049: replacement or BLOB type columns in DATATAG and COMMAND database tables. Used VARCHAR types instead. Adaptation of related Unit tests and fix of some minor issues related to simple types casting in some of those tests.